Fetch questions from api before displaying in QuestionsView
